# PruebaCompi1P52020

Examen1_p5_2020/Examen1_P5_2020/Lexer/: Lexer.h  expr_lexer.h  main.cpp
Examen1_p5_2020/Examen1_P5_2020/Lexer/fa/: arith.jff  bcomment.jff  expr_lexer.fa2l  identifier.jff  lcomment.jff  number.jff  start.jff
Examen1_p5_2020/Examen1_P5_2020/Lexer/tests/: CMakeLists.txt  test_lexer.cpp
Examen1_p5_2020/Examen1_P5_2020/Parser/: expr_parser.cpp  expr_parser.h  expr_symbols.h
Examen1_p5_2020/Examen1_P5_2020/Parser/tests/: CMakeLists.txt
Prueba1_P5_2020/: lexer.h  main.cpp
Prueba1_P5_2020/fa/: Cblock.jff  Cline.jff  const_lexer.fa2l  start.jff
Prueba1_P5_2020/tests/: CMakeLists.txt  test_lexer.cpp
Prueba2_P2_2020/: grammar.txt  l1.txt  lexer.h  parser.cpp  parser.h
Prueba2_P2_2020/tests/: test_parser.cpp
